<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boxInsetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditShoppingListActivity">


    <LinearLayout
        android:id="@+id/LayoutItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textViewStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Items from Walmart"
            android:textAlignment="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listItemsInReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_total"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="99$"
                android:textAlignment="viewEnd" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageViewInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/instructions_add_item" />

        <TextView
            android:id="@+id/textViewEditStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_item"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/inputItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_price" />

            <EditText
                android:id="@+id/inputPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switchTax"
                style="@style/DefaultSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:showText="false"
                android:text="@string/lbl_tax"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                tools:checked="false" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_item_to_list" />

        <Button
            android:id="@+id/btnViewList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_view_list" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/dark_grey"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/textViewStoreHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_instructions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_store" />

            <EditText
                android:id="@+id/inputStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAddList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/btn_create" />
    </LinearLayout>


</RelativeLayout>